<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_background"
    tools:context=".QuestionActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AddQuestionActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="8dp"
            android:text="Add a new question"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/userTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="8dp"
            android:hint="Write your title here"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textAlignment="textStart"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:ignore="RtlSymmetry" />
        <Button
            android:id="@+id/cameraButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:background="@drawable/camera"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.23"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userTitle" />

        <TextView
            android:id="@+id/cameraButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="From Camera"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.21"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cameraButton" />


        <Button
            android:id="@+id/galleryButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:background="@drawable/gallery"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cameraButton"
            app:layout_constraintTop_toBottomOf="@+id/userTitle" />

        <TextView
            android:id="@+id/galleryButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="From Gallery"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.69"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/galleryButton" />



        <ImageView
            android:id="@+id/questionImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:adjustViewBounds="true"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cameraButton"
             />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/sign_in_button_design_blue"
            android:padding="10dp"
            android:text="Save question"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>