<resources>
    <string name="app_name">GroupStudyingApp</string>
    <string name="anonymous_button_text">Sign in Anonymously</string>
    <string name="google_sign_in_text">Sign in with Google</string>

    <string name="new_course_explanation">
        Hey there!\nIf you\'d like to add a new course, please send\nus an email about it and we\'ll create it for you!
    </string>
    <string name="request_title">Request Title: </string>
    <string name="request_body">Request message body: </string>
    <string name="send_request">Send request</string>
    <string name="Request_new_course_creation">Request New Course Creation</string>

    <string name="crop_button_text">Finished cropping</string>
    <string-array name="report_choice_items">
        <item>offensive content</item>
        <item>irrelevant content</item>
        <item>other</item>
    </string-array>

    <string name="button_sort_by">Sort</string>
    <string name="sort_description">Sort questions by:</string>
    <string name="be_the_first_one_to_add">Be the first one to add!</string>
    <string name="embarrassed">embarrassed</string>
    <string name="no_questions_text">Uh oh, It seems like there are no questions for this course.</string>
    <string name="no_results_found">No results found</string>
    <string name="type_your_message_here">Type your message here</string>


</resources>
