<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/goto_sort_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackgroundBorderless"
    android:foregroundGravity="center_horizontal"
    android:clickable="true"
    android:clipToPadding="false"
    android:focusable="true"
    android:padding="5dp">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar_goto_sort"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@null"
        android:src="@drawable/sorting_arrows" />

</FrameLayout>