<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_image_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackgroundBorderless"
    android:clickable="true"
    android:clipToPadding="false"
    android:focusable="true"
    android:padding="5dp">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar_profile_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@null"
        android:src="@drawable/profile_image2"
        app:civ_border_color="#FF000000"
        app:civ_border_width="1dp" />

</FrameLayout>