...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionRate"
                app:srcCompat="@drawable/question" />


            <Button
                android:id="@+id/solutionButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/eye"
                android:padding="10dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/addAnswerButton"
                app:layout_constraintTop_toBottomOf="@+id/questionImage" />

            <TextView
                android:id="@+id/showSolutionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:gravity="end|center_vertical"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/solutionImage">

                <TextView
                    android:id="@+id/solutionRateText"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:text="" />

                <Button
                    android:id="@+id/solutionLikeButton"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/like1">

                </Button>
...
